--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/jest-dom": "^5.11.1",
     "@testing-library/react": "^10.4.7",
     "@testing-library/user-event": "^12.0.11",
+    "bootstrap": "^5.2.3",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
